Implement ScalaFX (JavaFX) gui
Assisted-by: GPT-5.6 Sol